fix (ТЗ №15): доработаны BookingRepository, CommentRepository, ItemServiceImpl (add-bookings)